cambio de color en fondo de sesión

--- a/paginas/crea-inicia.html
+++ b/paginas/crea-inicia.html
@@ -52,7 +52,7 @@
             <div class="informacion">
                 <div class="infoBienvenida">
                     <h1>Bienvenido Nuevamente</h1>
-                    <p>Para disfrutar mas en nuestra pagina Inicia Sesión con tus datos</p>
+                    <p>Para disfrutar mas en nuestra pagina Resgistrate</p>
                     <input type="button" value="Registrarse" id="inscribir">
                 </div>
                 <div class="formularioInformacion">
